--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Sentiment",
+  "name": "Social Sentiment",
   "slug": "sentiment",
   "keywords": "sentiment nlp",
   "description": "Easily find the sentiment of a sentence targeted for social media and support messages.",
